temporal-verifier/tests/examples/success/sorts/inference_basic.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

assume exists x. x & true
