temporal-verifier/tests/examples/fail/sorts/unknown_variable.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
assert forall y:s. x = y
